compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__positional_argument_after_labelled.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 891
expression: "type X { X(a: Int, b: Int, c: Int) }\nfn x() { X(b: 1, a: 1, 1) }"
snapshot_kind: text
---
----- SOURCE CODE
type X { X(a: Int, b: Int, c: Int) }
fn x() { X(b: 1, a: 1, 1) }

----- ERROR
error: Unexpected positional argument
  ┌─ /src/one/two.gleam:2:24
  │
2 │ fn x() { X(b: 1, a: 1, 1) }
  │                        ^

This unlabeled argument has been supplied after a labelled argument.
Once a labelled argument has been supplied all following arguments must
also be labelled.
