compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__qualified_type_invalid_operands.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 2326
expression: "\nimport maths as math\npub fn add_two_vectors(a: math.Vector, b: math.Vector) {\n  a + b\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
-- maths.gleam
pub type Vector { Vector(x: Float, y: Float) }

-- main.gleam

import maths as math
pub fn add_two_vectors(a: math.Vector, b: math.Vector) {
  a + b
}


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:4:3
  │
4 │   a + b
  │   ^

The + operator expects arguments of this type:

    Int

But this argument has this type:

    math.Vector


error: Type mismatch
  ┌─ /src/one/two.gleam:4:7
  │
4 │   a + b
  │       ^

The + operator expects arguments of this type:

    Int

But this argument has this type:

    math.Vector
