compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__qualified_type_not_a_tuple.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 2371
expression: "\nimport mod.{type Pair as Duo}\npub fn first(pair: Duo(a, b)) {\n  pair.0\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
-- mod.gleam
pub type Pair(a, b) { Pair(a, b) }

-- main.gleam

import mod.{type Pair as Duo}
pub fn first(pair: Duo(a, b)) {
  pair.0
}


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:4:3
  │
4 │   pair.0
  │   ^^^^ This is not a tuple

To index into this value it needs to be a tuple, however it has this type:

    Duo(a, b)
